--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-to-print": "^2.15.1",
+    "sharp": "^0.33.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
